<resources>
    <string name="app_name">Navigation Drawer</string>
    <string name="my_image">my image</string>
    <string name="bagus_anugerah_dinata">Bagus Anugerah Dinata</string>
    <string name="inbox">inbox</string>
    <string name="starred">starred</string>
    <string name="sent_mail">sent_mail</string>
    <string name="drafts">drafts</string>
    <string name="subheader">subheader</string>
    <string name="all_mail">all_mail</string>
    <string name="trash">trash</string>
    <string name="spam">spam</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
</resources>
