<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:title="@string/inbox"
            android:id="@+id/inbox_id"
            android:icon="@drawable/email"/>

        <item
            android:title="@string/starred"
            android:id="@+id/starred_id"
            android:icon="@drawable/star"/>

        <item
            android:title="@string/sent_mail"
            android:id="@+id/sent_id"
            android:icon="@drawable/send"/>

        <item
            android:title="@string/drafts"
            android:id="@+id/drafts_id"
            android:icon="@drawable/email_open"/>
    </group>

    <item android:title="@string/subheader">

        <menu>

            <item
                android:title="@string/all_mail"
                android:id="@+id/allmail_id"
                android:icon="@drawable/email"/>

            <item
                android:title="@string/trash"
                android:id="@+id/trash_id"
                android:icon="@drawable/delete"/>

            <item
                android:title="@string/spam"
                android:id="@+id/spam_id"
                android:icon="@drawable/alert"/>

        </menu>

    </item>

</menu>